# sycl-tla

./: .gitignore  CHANGELOG-SYCL.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTORS.md  HardwareCaps.txt  README-sycl.md  README.md  SYCL.cmake  build-2025.1_01.sh  build.sh  compiled_cache.db  copilot-instructions.md  flash_decode_runner.hpp  generate_prefill_cachedkv_320_tests.py  kernel-dyn-perf.txt  plan1.md  pr.diff  pyproject.toml  setup.cfg  weep for benchmark
benchmarks/flash_attention/: CMakeLists.txt  benchmark_runner.hpp  benchmarks.hpp  benchmarks_decode_bf16.cpp  benchmarks_decode_fp8.cpp  benchmarks_decode_fp8kv_fp16mma.cpp  benchmarks_prefill_bf16.cpp  benchmarks_prefill_fp8.cpp  benchmarks_prefill_fp8kv_fp16mma.cpp  benchmarks_prefill_mxfp4.cpp  benchmarks_prefill_mxfp8.cpp  fmha_configuration.hpp  main.cpp
benchmarks/flash_attention/flash_attention_decode/: CMakeLists.txt  benchmark_runner.hpp  benchmarks.hpp  benchmarks_1024.hpp  benchmarks_512.hpp  benchmarks_h128_1024_nonpaged.cpp  benchmarks_h128_1024_nonpaged.hpp  benchmarks_h128_1024_paged.cpp  benchmarks_h128_1024_paged.hpp  benchmarks_h128_512_nonpaged.cpp  benchmarks_h128_512_nonpaged.hpp  benchmarks_h128_512_paged.cpp  benchmarks_h128_512_paged.hpp  benchmarks_h128_fp32_fp32_1024.hpp  benchmarks_h128_fp32_fp32_1024_nonpaged.cpp  benchmarks_h128_fp32_fp32_512.hpp  benchmarks_h128_fp32_fp32_512_nonpaged.cpp  benchmarks_h128_fp32_u16_1024.hpp  benchmarks_h128_fp32_u16_1024_nonpaged.cpp  benchmarks_h128_fp32_u16_512.hpp  benchmarks_h128_fp32_u16_512_nonpaged.cpp  benchmarks_h192_1024_nonpaged.cpp  benchmarks_h192_1024_nonpaged.hpp  benchmarks_h192_1024_paged.cpp  benchmarks_h192_1024_paged.hpp  benchmarks_h192_512_nonpaged.cpp  benchmarks_h192_512_nonpaged.hpp  benchmarks_h192_512_paged.cpp  benchmarks_h192_512_paged.hpp  benchmarks_h192_fp32_fp32_1024.hpp  benchmarks_h192_fp32_fp32_1024_nonpaged.cpp  benchmarks_h192_fp32_fp32_512.hpp  benchmarks_h192_fp32_fp32_512_nonpaged.cpp  benchmarks_h192_fp32_u16_1024.hpp  benchmarks_h192_fp32_u16_1024_nonpaged.cpp  benchmarks_h192_fp32_u16_512.hpp  benchmarks_h192_fp32_u16_512_nonpaged.cpp  benchmarks_h64_1024_nonpaged.cpp  benchmarks_h64_1024_nonpaged.hpp  benchmarks_h64_1024_paged.cpp  (+31 more)
benchmarks/flash_attention/flash_attention_prefill/: CMakeLists.txt  benchmark_runner.hpp  benchmarks.hpp  fmha_prefill_configuration.hpp  main.cpp
benchmarks/flash_attention/flash_attention_prefill_cachedKV/: CMakeLists.txt  benchmark_runner.hpp  benchmarks.hpp  fmha_prefill_configuration.hpp
benchmarks/flash_attention/legacy/: CMakeLists.txt
benchmarks/gemm/: CMakeLists.txt  benchmark_runner.hpp  benchmarks_cuda.hpp  benchmarks_sycl.hpp  bmg_gemm_source_tile_sg.def  bmg_streamk_exhaustive_missing_tile.def  bmg_streamk_expanded_tile.def  bmg_streamk_seed_tile.def  dual_gemm_benchmark_runner.hpp  gemm_configuration_sycl.hpp  main.cpp
benchmarks/gemm/legacy/: CMakeLists.txt  benchmark_runner.hpp
examples/06_bmg_flash_attention/flash-attn/: CMakeLists.txt  pyproject.toml  setup.py
examples/sycl/: CMakeLists.txt
examples/sycl/00_bmg_gemm/: 00_bmg_gemm.cpp
examples/sycl/00_pvc_gemm/: 00_pvc_gemm.cpp  00_pvc_gemm_padded.cpp  CMakeLists.txt
examples/sycl/01_pvc_gemm_with_collective_builder/: 01_pvc_gemm_with_collective_builder.cpp
examples/sycl/02_bmg_gemm_mixed_dtype/: 02_bmg_gemm_bf16_s8.cpp  02_bmg_gemm_bf16_s8_bf16.cpp  02_bmg_gemm_f16_s8_s8.cpp  02_bmg_gemm_f16_s8_tensorwise.cpp  02_bmg_gemm_f16_u4.cpp  02_bmg_gemm_f16_u4_f16.cpp  02_bmg_gemm_f16_u4_f16_perf.cpp  02_bmg_gemm_f16_u4_s8.cpp  02_bmg_gemm_f18_s8_tensorwise.cpp  02_bmg_gemm_mixed_dtype.cpp  CMakeLists.txt
examples/sycl/02_pvc_gemm_mixed_dtype/: 02_pvc_gemm_mixed_dtype.cpp  CMakeLists.txt
examples/sycl/03_pvc_gemm_streamk/: 03_pvc_gemm_streamk.cpp  CMakeLists.txt
examples/sycl/04_bmg_grouped_gemm/: 04_bmg_grouped_gemm.cpp
examples/sycl/04_pvc_grouped_gemm/: 04_pvc_grouped_gemm.cpp  CMakeLists.txt
examples/sycl/05_bmg_gemm_with_epilogues/: 05_bmg_gemm_with_epilogue_splitk.cpp  05_pvc_gemm_with_epilogue_splitk.cpp
examples/sycl/05_pvc_epilogues/: CMakeLists.txt
examples/sycl/05_pvc_gemm_with_epilogues/: 05_pvc_gemm_single_b_with_per_col_bias.cpp  05_pvc_gemm_with_epilogue_gelu.cpp  05_pvc_gemm_with_epilogue_lincombdeeltact.cpp  05_pvc_gemm_with_epilogue_relu.cpp  05_pvc_gemm_with_epilogue_rmsnorm.cpp  05_pvc_gemm_with_epilogue_silu.cpp  05_pvc_gemm_with_epilogue_softmax.cpp  05_pvc_gemm_with_epilogue_splitk.cpp  05_pvc_gemm_with_per_col_bias.cpp  05_pvc_gemm_with_per_row_bias.cpp  05_pvc_gemm_with_topk_and_softmax.cpp  CMakeLists.txt
examples/sycl/06_bmg_flash_attention/: 06_bmg_decode_attention.cpp  06_bmg_decode_attention_fp8.cpp  06_bmg_prefill_attention_fp8.cpp  06_bmg_prefill_attention_inputfp8_outputfp32.cpp  06_bmg_prefill_attention_prefill_cachedKV.cpp  06_bmg_run_decode_kv1024.hpp  06_bmg_run_decode_kv512.hpp  CMakeLists.txt  bmg_flash_attn_decode_runner.hpp  bmg_flash_attn_prefill_cachedKV_runner.hpp  bmg_flash_attn_prefill_runner.hpp
examples/sycl/06_pvc_flash_attention/: 06_pvc_decode_attention.cpp  06_pvc_prefill_attention.cpp  CMakeLists.txt  pvc_flash_attn_decode_runner.hpp  pvc_flash_attn_prefill_runner.hpp  pvc_flash_attn_runner.hpp  pvc_flash_decode_runner.hpp
examples/sycl/06_pvc_flash_attention_v2/: CMakeLists.txt
examples/sycl/06a_bmg_flash_attention_sdpa_fwd_bshd/: bmg_flash_attn_sdpa_fwd_bshd_runner.hpp
examples/sycl/07_pvc_dual_gemm/: 07_pvc_dual_gemm.cpp
examples/sycl/08_bmg_gemm_f8/: 08_bmg_gemm_f8.cpp  08_bmg_gemm_f8_deepseek_scaling.cpp  08_bmg_gemm_f8_scaling.cpp  CMakeLists.txt
examples/sycl/08_pvc_gemm_f8/: 08_pvc_gemm_f8.cpp
examples/sycl/09_bmg_gemm_int4/: 09_bmg_gemm_int4.cpp  CMakeLists.txt
examples/sycl/09_bmg_gemm_int4_streamk/: 09_bmg_gemm_int4_streamk.cpp  CMakeLists.txt
examples/sycl/09_bmg_grouped_gemm_fp8/: 09_bmg_grouped_gemm_fp8.cpp  CMakeLists.txt
examples/sycl/09_bmg_scaled_mm_f8/: 09_bmg_scaled_mm_f8.cpp  CMakeLists.txt
examples/sycl/09_device_agnostic/: CMakeLists.txt
examples/sycl/10_pvc_gemm_int4_streamk/: CMakeLists.txt  (+1 more)
(+1589 files in other folders)
